--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -17,7 +17,7 @@
   border: none;
   padding: 10px;
   background-color: #00acee;
-  text-decoration: none;
+  text-decoration: none !important;
   color: white !important;
   margin-top: 20px;
   text-align: center;
