--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -1,5 +1,5 @@
 // Form Styling
-.container {
+.tweet-container {
   display: flex;
   flex-direction: column;
 
@@ -47,14 +47,14 @@
 }
 
 @media screen and (min-width: 668px) and (max-width: 1023px) {
-  .container {
+  .tweet-container {
     width: 70vw;
     margin: 0 auto;
   }
 }
 
 @media screen and (min-width: 1024px) {
-  .container {
+  .tweet-container {
     flex-direction: row;
     justify-content: center;
 
@@ -66,7 +66,7 @@
 }
 
 @media screen and (min-width: 1700px) and (max-width: 2099px) {
-  .container {
+  .tweet-container {
     justify-content: center;
 
     .form-container {
@@ -76,7 +76,7 @@
 }
 
 @media screen and (min-width: 2100px) and (max-width: 3500px) {
-  .container {
+  .tweet-container {
     justify-content: center;
 
     .form-container {
