--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -11,6 +11,8 @@
   text-transform: uppercase;
   border-radius: 20px;
   pointer-events: none;
+  margin-top: 0px;
+  margin-bottom: 15px;
 }
 
 .tweet-btn {
@@ -23,4 +25,18 @@
   text-align: center;
   text-transform: uppercase;
   border-radius: 20px;
+  margin-top: 0px;
+  margin-bottom: 15px;
+}
+
+@media screen and (min-width: 1024px) {
+  .tweet-btn {
+    margin-top: 15px;
+    margin-bottom: 0px;
+  }
+
+  .btn-disabled {
+    margin-top: 15px;
+    margin-bottom: 0px;
+  }
 }
