--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -9,8 +9,22 @@
     padding: 5px;
 
     select {
-      margin-bottom: 10px;
-      padding: 8px;
+      height: 45px;
+      margin: 8px 0;
+      border: 0;
+      border: 1px solid #00acee;
+      border-top: 4px solid #00acee;
+      background: #fff
+        url('https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_keyboard_arrow_down_48px-128.png')
+        no-repeat;
+      background-size: 20px;
+      background-position: right 10px center;
+      padding-left: 24px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px;
     }
 
     .preview-image-wrapper {
@@ -39,8 +53,6 @@
 
       & input {
         margin-right: 10px;
-        height: 1rem;
-        width: auto;
       }
     }
   }
