--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -8,6 +8,10 @@
     flex-direction: column;
     padding: 5px;
 
+    .step-label {
+      font-weight: 700;
+    }
+
     select {
       height: 45px;
       margin: 8px 0;
