--- a/src/styles/components/_tweetcard.scss
+++ b/src/styles/components/_tweetcard.scss
@@ -16,8 +16,8 @@
     flex-direction: row;
 
     img {
-      height: 2.4rem;
-      width: 2.4rem;
+      height: 3rem;
+      width: 3rem;
       border-radius: 50%;
       align-self: center;
       margin-top: 10px;
@@ -57,7 +57,7 @@
     }
 
     .tweet-image {
-      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+      // box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
       border-radius: 10px;
     }
 
